--- a/gradle.properties
+++ b/gradle.properties
@@ -18,6 +18,7 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+kapt.use.worker.api=false 
 #API KEY
 CLIENT_ID = "FZpIl7feLseFHwV4DScQqiaVULO54C7GRBiqlmDrxdI"
 SECRET_KEY = "F91OpKAWUx6mSzdNVDKDf8SXgS4HwLzNTqGWMYkoOuE"
