--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,11 +37,12 @@ android {
         viewBinding true
         buildConfig  true
     }
-    
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
     kotlinOptions {
         jvmTarget = '1.8'
     }
@@ -73,6 +74,11 @@ dependencies {
     // Paging 3
     implementation "androidx.paging:paging-runtime:$pagingVersion"
 
+    // room database
+    def room_version = "2.3.0"
+    implementation "androidx.room:room-runtime:$room_version"
+    implementation("androidx.room:room-ktx:$room_version")
+    kapt "androidx.room:room-compiler:$room_version"
 
     //architectural components
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
@@ -98,8 +104,8 @@ dependencies {
     implementation "com.airbnb.android:lottie:3.7.0"
 
     //Glide
-    implementation 'com.github.bumptech.glide:glide:4.12.0'
-    kapt 'com.github.bumptech.glide:compiler:4.12.0'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    kapt 'com.github.bumptech.glide:compiler:4.11.0'
 
     //SDP responsive
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
